# bff/src/modules/cart/dto/select-shipping-method.request.ts
@@ -1,0 +1,9 @@
+import { IsString } from 'class-validator';
+
+export class SelectShippingMethodRequestDto {
+  @IsString()
+  carrierCode!: string;
+
+  @IsString()
+  methodCode!: string;
+}
