# bff/src/modules/cart/dto/update-cart-item-quantity.request.ts
@@ -1,0 +1,7 @@
+import { IsInt, Min } from 'class-validator';
+
+export class UpdateCartItemQuantityRequestDto {
+  @IsInt()
+  @Min(1)
+  quantity!: number;
+}
